--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
+annotated-types==0.7.0
 asn1crypto==1.5.1
+baml-py==0.68.0
 certifi==2024.8.30
 cffi==1.17.1
 charset-normalizer==3.4.0
@@ -11,9 +13,12 @@ pandas==2.2.3
 platformdirs==4.3.6
 pyarrow==18.0.0
 pycparser==2.22
+pydantic==2.10.1
+pydantic_core==2.27.1
 PyJWT==2.10.0
 pyOpenSSL==24.2.1
 python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
 pytz==2024.2
 requests==2.32.3
 six==1.16.0
