--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,30 @@
 annotated-types==0.7.0
 asn1crypto==1.5.1
 baml-py==0.68.0
+blinker==1.9.0
+boto3==1.35.71
+boto3-stubs==1.35.71
+botocore==1.35.71
+botocore-stubs==1.35.71
 certifi==2024.8.30
 cffi==1.17.1
 charset-normalizer==3.4.0
+click==8.1.7
+confluent-kafka==2.6.1
 cryptography==43.0.3
 filelock==3.16.1
+Flask==3.1.0
 idna==3.10
+itsdangerous==2.2.0
+Jinja2==3.1.4
+jmespath==1.0.1
+MarkupSafe==3.0.2
 numpy==2.1.3
 packaging==24.2
 pandas==2.2.3
+pandas-stubs==2.2.3.241009
 platformdirs==4.3.6
+psycopg2==2.9.10
 pyarrow==18.0.0
 pycparser==2.22
 pydantic==2.10.1
@@ -21,10 +35,17 @@ python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2024.2
 requests==2.32.3
+s3transfer==0.10.4
 six==1.16.0
 snowflake-connector-python==3.12.3
 sortedcontainers==2.4.0
 tomlkit==0.13.2
+types-awscrt==0.23.1
+types-confluent-kafka==1.2.2
+types-psycopg2==2.9.21.20241019
+types-pytz==2024.2.0.20241003
+types-s3transfer==0.10.4
 typing_extensions==4.12.2
 tzdata==2024.2
 urllib3==2.2.3
+Werkzeug==3.1.3
